# robotfindskitten

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .lldb  CMakeLists.txt  CMakePresets.json  Doxyfile.in  Justfile  LICENSE  README.md  cmake-format.yaml  compile_commands.json  notepadgame.sln  notepadgame.vcxproj  notepadgame.vcxproj.filters  vcpkg.json
loader/: loader.vcxproj  main.cpp
notepadgame/: character.cpp  character.h  dllmain.cpp  input.cpp  input.h  notepadgame.vcxproj  notepadgame.vcxproj.filters  notepadgamedll.vcxproj  notepadgamedll.vcxproj.filters  world.cpp  world.h
notepadgame/core/: atmosphere.cpp  atmosphere.h  base_types.cpp  base_types.h  common.h  easing.h  engine.cpp  engine.h  gamelog.cpp  gamelog.h  iat_hook.cpp  iat_hook.h  input.cpp  input.h  notepad.cpp  notepad.h  notepader.cpp  notepader.h  outlog.h  outputlog.h  tick.cpp  tick.h  ticker.cpp  ticker.h  world.cpp  world.h
notepadgame/ecs_processors/: animations.cpp  animations.h  collision.cpp  collision.h  drawer.cpp  drawer.h  drawers.h  killer.h  lifetime_timer.h  motion.cpp  motion.h  movement.cpp  movement.h  redrawer.h  tick_new.cpp  tick_new.h  timers.h
notepadgame/entities/: actor.cpp  actor.h  atmosphere.cpp  atmosphere.cpp~  atmosphere.h  character.cpp  character.h  factories.cpp  factories.h  projectile.cpp  projectile.h
notepadgame/scintilla/src/: Editor.cxx
notepadgame/world/: actor.cpp  actor.h  character.cpp  character.h  level.cpp  level.h  projectile.cpp  projectile.h
notepadgame/world_entities/: actor.cpp  actor.h  character.cpp  character.h  level.cpp  level.h  projectile.cpp  projectile.h
patch/scintilla/src/: Editor.cxx
src/: config.h.in
src/loader/: CMakeLists.txt  main.cpp
src/notepadgame/: CMakeLists.txt  conanfile.txt  dllmain.cpp
src/notepadgame/core/: base_types.cpp  base_types.h  easing.h  engine.cpp  engine.h  gamelog.cpp  gamelog.h  iat_hook.h  input.cpp  input.h  notepader.cpp  notepader.h  tick.cpp  tick.h  world.cpp  world.h
src/notepadgame/ecs_processors/: collision.cpp  collision.h  killer.h  timers.h
src/notepadgame/engine/: CMakeLists.txt  base_types.cpp  base_types.h  buffer.cpp  buffer.h  ecs_processor_base.h  engine.cpp  engine.h  gamelog.cpp  iat_hook.h  input.cpp  input.h  notepad.cpp  notepad.h  notepader.cpp  notepader.h  scintilla_wrapper.cpp  scintilla_wrapper.h  tick.cpp  tick.h  time.h  time.py  world.cpp  world.h
src/notepadgame/engine/details/: base_types.cpp  base_types.h  base_types.hpp  gamelog.cpp  gamelog.h  iat_hook.h  nonconstructors.h
src/notepadgame/entities/: factories.h
src/notepadgame/game/: CMakeLists.txt  comps.h  factories.h  game.h  lexer.h  messages.h.in
src/notepadgame/game/assets/: phases.txt
src/notepadgame/game/ecs_processors/: collision.cpp  collision.h  drawers.h  input.h  input_passer.h  killer.h  life.h  motion.cpp  motion.h  render_commands.h  screen_change_handler.h  timers.h
src/notepadgame/game/entities/: factories.h
src/notepadgame/libs/easing/: easing.h
src/robotfindskiten/: CMakeLists.txt
src/robotfindskiten/engine/: scintilla_wrapper.cpp
src/robotfindskiten/game/ecs_processors/: collision.cpp  drawers.h
src/robotfindskiten/libs/easing/: CMakeLists.txt
src/robotfindskitten/: CMakeLists.txt  dllmain.cpp
src/robotfindskitten/engine/: CMakeLists.txt  buffer.cpp  buffer.h  notepad.cpp  notepad.h  scintilla_wrapper.cpp  scintilla_wrapper.h  time-prototype.py  time.h  world.h
src/robotfindskitten/engine/details/: base_types.hpp  iat_hook.h  nonconstructors.h
src/robotfindskitten/game/: CMakeLists.txt  comps.h  easing-prototype.py  factories.cpp  factories.h  game.h  lexer.h  messages.h.in  messages.txt  shuffle-messages.py
src/robotfindskitten/game/assets/: messages.txt
src/robotfindskitten/game/ecs_processors/: collision.cpp  collision.h  collision_query.h  drawers.h  input.h  life.h  motion.cpp  motion.h
src/robotfindskitten/game/systems/: collision.h  collision_query.h  drawers.h  input.h  life.h  motion.h
tests/: CMakeLists.txt  collision_test.cpp  test_collision.cpp
